--- a/views/pages/addLeavedays.ejs
+++ b/views/pages/addLeavedays.ejs
@@ -27,7 +27,7 @@
 
     <p class="pb-2">Select start to end Date</p>
 
-      <div date-rangepicker="" class="flex items-center">
+      <div date-rangepicker class="flex items-center">
         <div class="relative">
           <div
             class="
@@ -55,7 +55,7 @@
           </div>
           <input
             name="start"
-            type="date"
+            type="text"
             class="
               bg-gray-50
               border border-gray-300
@@ -100,7 +100,7 @@
           </div>
           <input
             name="end"
-            type="date"
+            type="text"
             class="
               bg-gray-50
               border border-gray-300
@@ -126,4 +126,6 @@
     </form>
   </div>
 </div>
+<script src="https://unpkg.com/@themesberg/flowbite@1.1.1/dist/datepicker.bundle.js"></script>
+
 <%- include("../partials/footer"); -%>
