create flash message system

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header"); -%>
-
+<%- include("../partials/flash-message"); -%>
 <div class="start">
   <div class="search-bar">
     <input class="search" placeholder="What are you working on?" type="text" />
