--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -16,6 +16,7 @@
     <title><%= title %></title>
   </head>
   <body>
+    <%- include("../partials/flash-message"); -%>
     <div class="container">
       <div class="forms-container">
         <div class="signin">
