--- a/views/pages/allUsers.ejs
+++ b/views/pages/allUsers.ejs
@@ -90,12 +90,14 @@
 </div>
 <!-- End profile card -->
 <!--  Markup User Table  -->
-<a href="/add-user"
-  ><button class="p-2 bg-blue-500 rounded-lg text-white font-medium ml-4">
-    Add User
-  </button>
-</a>
-<div class="flex mt-4 justify-center min-h-screen bg-white">
+<div class="flex justify-center">
+  <a href="/add-user"
+    ><button class="p-2 bg-blue-500 rounded-lg text-white font-medium ml-4">
+      Add User
+    </button>
+  </a>
+</div>
+<div class="flex mt-4 justify-center min-h-screen ml-40 bg-white">
   <div class="">
     <div class="overflow-auto lg:overflow-visible">
       <div class="flex lg:justify-between border-b-2 border-fuchsia-900 pb-1">
