--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,11 +7,13 @@
     <title><%= title %></title>
 
     <link rel="stylesheet" href="<%=baseUrl%>/css/main.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/vendors/toastify.css" />
+    <link rel="stylesheet" href="<%= baseUrl%>/css/styles.css" />
+    <link rel="stylesheet" href="/css/vendors/toastify.css" />
     <script src="js/vendors/toastify.js"></script>
   </head>
   <body>
     <%- include("./nav.ejs"); -%>
 
     <div class="container">
+  </body>
+</html>
