--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -46,17 +46,17 @@
     <li class="list">
       <b></b>
       <b></b>
-      <a href="/add-holiday">
+      <a href="/holiday-list">
         <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
-        <span class="title">Add holidays</span>
+        <span class="title"> Holidays</span>
       </a>
     </li>
     <li class="list">
       <b></b>
       <b></b>
-      <a href="/add-leaveday">
+      <a href="/leavedays-list">
         <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
-        <span class="title">Add Leave days</span>
+        <span class="title"> Leavedays</span>
       </a>
     </li>
 
