--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -1,5 +1,70 @@
 <%- include("../partials/header"); -%>
+<style>
 
+*, *::after, *::before {
+  box-sizing: border-box;
+}
+
+button {
+  background: none;
+  appearance: none;
+  -webkit-appearance: none;
+  -ms-appearance: none;
+  -moz-appearance: none;
+  border: none;
+  cursor: pointer;
+}
+
+.page-btn {
+  background: #ddd;
+  color: #2c303a;
+  height: 35px;
+  border-radius: 2px;
+  padding: 0 10px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  transition: background 0.3s ease;
+  margin: 0 2px
+}
+
+.page-btn:first-of-type {
+  margin-left: 0;
+}
+
+.page-btn:last-of-type {
+  margin-right: 0;
+}
+
+.page-btn:not([class$="-page"]) {
+  width: 35px;
+}
+
+.pagination-buttons {
+  display: flex;
+  align-items: center;
+}
+
+.page-btn[class*="-page"] {
+  background: #ccc;
+  font-size: 0.6em;
+  font-weight: 700;
+}
+
+.page-btn.active {
+  background: #717790;
+  color: #fff;
+}
+
+.page-btn[disabled] {
+  opacity: 0.3;
+}
+#pagination-show{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 10px;
+}
+</style>
 
 <!-- Markup top  card for employee activits -->
 <div class="">
@@ -183,9 +248,103 @@
         <% })  %> 
         </tfoot>
       </table>
+      <div id="pagination-show">
+      </div>
     </div>
   </div>
 </div>
+<script>
+  const pageNumbers = (total, max, current) => {
+  const half = Math.floor(max / 2);
+  let to = max
+  if (current + half >= total) {
+    to = total;
+  } else if (current > half) {
+    to = current + half
+  }
+  const from = to - max
+  return Array.from({ length: max }, (_, i) => (i + 1) + from)
+}
+
+// Pagination Button action function
+
+function PaginationButtons(totalPages, maxPageVisible = 10, currentPage = 1) {
+  let pages = pageNumbers(totalPages, maxPageVisible, currentPage)
+  let currentPageBtn = null;
+  const buttons = new Map()
+  const fragment = document.createDocumentFragment()
+  const paginationButtonContainer = document.createElement('div');
+  paginationButtonContainer.className = 'pagination-buttons'
+
+  const disabled = {
+    start: () => pages[0] === 1,
+    prev: () => currentPage === 1,
+    end: () => pages.slice(-1)[0] === totalPages,
+    next: () => currentPage === totalPages,
+  }
+
+  // Create Button and button details
+
+  const createAndSetupButtons = (label = '', cls = '', disabled = false, handleClick = () => {}) => {
+    const button = document.createElement('button');
+    button.textContent = label;
+    button.className = `page-btn ${cls}`
+    button.disabled = disabled
+    button.addEventListener('click', (event) => {
+      handleClick(event);
+      this.update();
+      paginationButtonContainer.value = currentPage;
+      paginationButtonContainer.dispatchEvent(new Event('change'));
+    })
+    return button
+  }
+
+  const onPageButtonClick = (e) => currentPage = Number(e.currentTarget.textContent)
+
+  const onPageButtonUpdate = (index) => (btn) => {
+    btn.textContent = pages[index]
+    if (pages[index] === currentPage) {
+      currentPageBtn.classList.remove('active')
+      btn.classList.add('active')
+      currentPageBtn = btn;
+      currentPageBtn.focus()
+    }
+  }
+
+  buttons.set(createAndSetupButtons('start', 'start-page', disabled.start(), () => currentPage = 1), (btn) => btn.disabled = disabled.start())
+  buttons.set(createAndSetupButtons('prev', 'prev-page', disabled.prev(), () => currentPage -= 1), (btn) => btn.disabled = disabled.prev())
+
+  pages.forEach((pageNumber, index) => {
+    const isCurrentPage = pageNumber === currentPage
+    const button = createAndSetupButtons(pageNumber, isCurrentPage ? 'active' : '', false, onPageButtonClick)
+    if (isCurrentPage) {
+      currentPageBtn = button;
+    }
+    buttons.set(button, onPageButtonUpdate(index))
+  })
+
+  buttons.set(createAndSetupButtons('next', 'next-page', disabled.next(), () => currentPage += 1), (btn) => btn.disabled = disabled.next())
+
+  buttons.set(createAndSetupButtons('end', 'end-page', disabled.end(), () => currentPage = totalPages), (btn) => btn.disabled = disabled.end())
+  buttons.forEach((_, btn) => {
+    fragment.appendChild(btn)
+  })
+
+  this.render = (container = document.body) => {
+    paginationButtonContainer.appendChild(fragment)
+    container.appendChild(paginationButtonContainer)
+  }
+
+  this.update = (newPageNumber = currentPage) => {
+    currentPage = newPageNumber
+    pages = pageNumbers(totalPages, maxPageVisible, currentPage)
+    buttons.forEach((updateButton, button) => updateButton(button))
+  }
+  this.onChange = (handler) => {
+    paginationButtonContainer.addEventListener('change', handler);
+  }
+}
+</script>
 <script src="https://unpkg.com/@themesberg/flowbite@1.1.1/dist/datepicker.bundle.js"></script>
 <script src="<%=baseUrl%>/js/report.js"></script>
 <%- include("../partials/footer"); -%>
