--- a/views/pages/holidays.ejs
+++ b/views/pages/holidays.ejs
@@ -21,7 +21,7 @@
   }
 </style>
 
-<div class="flex justify-center">
+<div class="flex justify-start">
   <a href="/add-holiday"
     ><button class="p-2 bg-blue-500 rounded-lg text-white font-medium">
       Add holiday
