--- a/views/pages/leavedays.ejs
+++ b/views/pages/leavedays.ejs
@@ -21,7 +21,7 @@
   }
 </style>
 
-<div class="flex justify-center">
+<div class="flex justify-start">
   <a href="/add-leaveday"
     ><button class="p-2 bg-blue-500 rounded-lg text-white font-medium ml-4">
       Add Leaveday
