--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -18,6 +18,15 @@
         <span class="title">Reports</span>
       </a>
     </li>
+
+    <li class="list">
+      <b></b>
+      <b></b>
+      <a href="/holiday-list">
+        <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
+        <span class="title"> Holidays</span>
+      </a>
+    </li>
     <% } else { %>
     <li class="list">
       <b></b>
