--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -22,7 +22,7 @@
     <li class="list">
       <b></b>
       <b></b>
-      <a href="/holiday-list">
+      <a href="/employee-see/holidays">
         <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
         <span class="title"> Holidays</span>
       </a>
