create 4 new file
for options , optionController.js, optionsModel, optionsRoute.js , options.ejs

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -78,6 +78,15 @@
         <span class="title">Users</span>
       </a>
     </li>
+
+    <li class="list">
+      <b></b>
+      <b></b>
+      <a href="/options">
+        <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
+        <span class="title">Options</span>
+      </a>
+    </li>
     <% } %>
   </ul>
 </div>
