add Flash message

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,7 @@
   </head>
   <body>
     <%- include("./nav.ejs"); -%>
+    <%- include("./flash-message.ejs"); -%>
 
     <div class="container">
   </body>
