--- a/views/partials/flash-message.ejs
+++ b/views/partials/flash-message.ejs
@@ -1,46 +1,88 @@
 <style>
-  div.messages {
-display: flex;
-justify-content: center;
-align-items: center;
-}
+  @import url("https://fonts.googleapis.com/css?family=Quicksand&display=swap");
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  h3 {
+    font-family: Quicksand;
+  }
+  .alert {
+    width: 50%;
+    margin: 20px auto;
+    padding: 30px;
+    position: relative;
+    border-radius: 5px;
+    box-shadow: 0 0 15px 5px #ccc;
 
-ul.messages {
-list-style: none;
-min-width: 600px;
-max-width: 600px;
-border-radius: 8px;
-overflow: hidden;
-margin: 16px;
-}
-
-ul.messages * {
-padding: 8px 12px;
-}
-
-.messages .error {
-background-color: #f87171;
-}
-.messages .success {
-background-color: #6ee7b7;
-}
-.messages .warning {
-background-color: #fcd34d;
-}
-.messages .info {
-background-color: #93c5fd;
-}
+  }
+  .close {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    opacity: 0.5;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 50%;
+    right: 15px;
+    top: 25px;
+    text-align: center;
+    font-size: 1.6em;
+    cursor: pointer;
+  }
+  .simple-alert {
+    background-color: #ebebeb;
+    border-left: 5px solid #6c6c6c;
+  }
+  .simple-alert .close {
+    border-color: #6c6c6c;
+    color: #6c6c6c;
+  }
+  .success-alert {
+    background-color: #a8f0c6;
+    border-left: 5px solid #178344;
+  }
+  .success-alert .close {
+    border-color: #178344;
+    color: #178344;
+  }
+  .danger-alert {
+    background-color: #f7a7a3;
+    border-left: 5px solid #8f130c;
+  }
+  .danger-alert .close {
+    border-color: #8f130c;
+    color: #8f130c;
+  }
+  .warning-alert {
+    background-color: #ffd48a;
+    border-left: 5px solid #8a5700;
+  }
+  .warning-alert .close {
+    border-color: #8a5700;
+    color: #8a5700;
+  }
 </style>
-
-<% if (locals.messages) { %>
-<div class="messages">
-  <ul class="messages">
-    <% Object.keys(messages).forEach((key) => { %> <%
-    messages[key].forEach((message) => { %>
-    <li class="<%= key %>"><%= message %></li>
-    <% }) %> <% }) %>
-  </ul>
+<% if(flashMessage.success){ %>
+<div class="alert success-alert">
+  <h3><%= flashMessage.success %></h3>
+  <a class="close"  >&times;</a>
+</div>
+<% } %> <% if(flashMessage.fail){ %>
+<div class="alert danger-alert">
+  <h3><%= flashMessage.fail %></h3>
+  <a class="close" onClick='removeThis(this)'>&times;</a>
 </div>
 <% } %>
 
-
+<script>
+  setTimeout(function(event){
+    const tar = document.querySelector('.close')
+    removeThis(tar)
+    
+  },3000)
+  function removeThis(ele) {
+    ele.parentNode.remove();
+};
+</script>
