--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -241,9 +241,9 @@ button {
           <td class="p-3"><%= el.avgStartTime  || '00' %> </td>
           <td class="p-3"><%= el.avgEndTime  || '00'%> </td>
           <td class="p-3"></td>
-          <td class="p-3"><%= el.fixed_total + 'hr' %></td>
+          <td class="p-3"><%= el.fixed_total + 'hr' || '00'  %></td>
           <td class="p-3"><%= el.weekTotal || '00' %> </td>
-          <td class="p-3"><%= el.totalLessORExtra %> </td>
+         <td class="p-3"><%= el.totalLessORExtra === 'NaN:NaN:NaN' ? '00' : el.totalLessORExtra %></td> 
           </tr>
         <% })  %> 
         </tfoot>
